<resources>
    <string name="app_name">BroadcastApp1</string>
    <string name="send_custom_broadcast">SEND CUSTOM BROADCAST</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_id">Widget ID</string>
    <string name="xxxx">XXXX</string>
    <string name="last_update">Last Update</string>
    <string name="xx">XX</string>
    <string name="update_now">UPDATE NOW</string>
</resources>
