<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/section_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/widgetText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/widget_id"
            />
        <TextView
            android:id="@+id/widgetID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xxxx"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_update"
        android:layout_below="@id/section_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textStyle="bold"
            android:text="@string/last_update"
            />

        <TextView
            android:id="@+id/appwidget_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/xx"
            />


    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_below="@id/section_update"
        android:text="@string/update_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>